Fixes a deadlock occurring with certain DirectShow filters when stopping a streamed video (see QTBUG-8420 for test code and video).